@@ -1,2 +1,13 @@
 # Jump-And-Run
+
 This is a little Java 2D jump and run game. The game is built with JavaFX.
+
+## Screenshots
+
+![img](docs/assets/screenshot.JPG)
+
+## How to play
+
+- Download JavaFx
+- Add ``--module-path path-to-javaFXSDK\lib --add-modules=javafx.controls,javafx.fxml`` to the VM options
+- Execute the proejct
